--- a/src/Components/Navigation/SideDrawer/sideDrawer.css
+++ b/src/Components/Navigation/SideDrawer/sideDrawer.css
@@ -13,7 +13,7 @@
 }
 
 @media (min-width: 500px) {
-  SideDrawer {
+  .SideDrawer {
     display: none;
   }
 }
@@ -24,4 +24,8 @@
 
 .Closed {
   transform: translateX(-100%);
+}
+
+.Logo {
+  height: 11%
 }
